Práctica 5/src/gramatica.output
Estado 10 conflictos: 2 reducción/reducción
Estado 31 conflictos: 1 desplazamiento/reducción
Estado 36 conflictos: 1 desplazamiento/reducción
Estado 170 conflictos: 1 desplazamiento/reducción
Estado 186 conflictos: 1 desplazamiento/reducción
Estado 187 conflictos: 1 desplazamiento/reducción
Estado 195 conflictos: 1 desplazamiento/reducción
Estado 196 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 $@1: %empty

    2 Programa: $@1 MAIN bloque

    3 $@2: %empty

    4 $@3: %empty

    5 bloque: BLOCK_START $@2 bloque_in BLOCK_END $@3

    6 $@4: %empty

    7 bloque_in: Declar_de_variables_locales $@4 Declar_de_subprogs Sentencias

    8 $@5: %empty

    9 bloque_in: Declar_de_variables_locales $@5 Declar_de_subprogs

   10 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
   11                   | %empty

   12 $@6: %empty

   13 Declar_subprog: Cabecera_subprograma $@6 bloque

   14 $@7: %empty

   15 Declar_de_variables_locales: BEGIN_LOCAL $@7 Variables_locales END_LOCAL
   16                            | %empty

   17 Variables_locales: Variables_locales Cuerpo_declar_variables
   18                  | Cuerpo_declar_variables

   19 $@8: %empty

   20 Cuerpo_declar_variables: tipo $@8 lista_variables COLON
   21                        | error

   22 $@9: %empty

   23 $@10: %empty

   24 Cabecera_subprograma: tipo IDENTIFIER $@9 PARENT_START lista_de_parametros PARENT_END $@10

   25 lista_de_parametros: lista_de_parametros COMMA parametro
   26                    | parametro
   27                    | %empty
   28                    | error

   29 parametro: tipo IDENTIFIER

   30 $@11: %empty

   31 Sentencias: Sentencias $@11 Sentencia

   32 $@12: %empty

   33 Sentencias: $@12 Sentencia

   34 $@13: %empty

   35 Sentencia: $@13 bloque
   36          | Sentencia_asignacion

   37 $@14: %empty

   38 Sentencia: $@14 Sentencia_if

   39 $@15: %empty

   40 Sentencia: $@15 Sentencia_while

   41 $@16: %empty

   42 Sentencia: $@16 Sentencia_entrada

   43 $@17: %empty

   44 Sentencia: $@17 Sentencia_salida

   45 $@18: %empty

   46 Sentencia: $@18 Sentencia_return

   47 $@19: %empty

   48 Sentencia: $@19 Sentencia_for

   49 $@20: %empty

   50 Sentencia: $@20 Sentencia_lista

   51 Sentencia_asignacion: IDENTIFIER ASSIGN expresion COLON

   52 Sentencia_if: IF PARENT_START expresion PARENT_END Sentencia

   53 $@21: %empty

   54 Sentencia_if: IF PARENT_START expresion PARENT_END Sentencia ELSE $@21 Sentencia

   55 $@22: %empty

   56 Sentencia_while: WHILE PARENT_START expresion PARENT_END $@22 Sentencia

   57 Sentencia_entrada: INPUT STRING COMMA lista_variables COLON
   58                  | INPUT lista_variables COLON

   59 Sentencia_salida: OUTPUT Lista_expresiones_o_cadena COLON

   60 @23: %empty

   61 Sentencia_return: RETURN expresion @23 COLON

   62 Sentencia_for: FOR IDENTIFIER ASSIGN expresion TO expresion Sentencia

   63 Sentencia_lista: IDENTIFIER OP_LIST COLON
   64                | DOLLAR IDENTIFIER COLON

   65 expresion: OP_UNARY_NEG expresion
   66          | OP_UNARY_COUNT expresion
   67          | OP_UNARY_QUEST expresion
   68          | PLUS_PLUS expresion
   69          | MINUS_MINUS expresion
   70          | expresion PLUS_MINUS expresion
   71          | PLUS_MINUS expresion
   72          | expresion OP_BINARY_MUL expresion
   73          | expresion OP_BINARY_AND expresion
   74          | expresion OP_BINARY_OR expresion
   75          | expresion OP_BINARY_REL expresion
   76          | expresion OP_BINARY_EQ expresion
   77          | expresion AT expresion
   78          | expresion MINUS_MINUS expresion
   79          | IDENTIFIER
   80          | constante
   81          | funcion
   82          | expresion PLUS_PLUS expresion AT expresion
   83          | PARENT_START expresion PARENT_END
   84          | error

   85 funcion: cabecera_funcion argumentos_funcion

   86 cabecera_funcion: IDENTIFIER PARENT_START

   87 argumentos_funcion: Lista_expresiones PARENT_END
   88                   | PARENT_END

   89 Lista_expresiones_o_cadena: Lista_expresiones_o_cadena COMMA expresion
   90                           | Lista_expresiones_o_cadena COMMA STRING
   91                           | expresion
   92                           | STRING

   93 constante: constante_base
   94          | constante_lista

   95 constante_base: CONST_INT
   96               | CONST_FLOAT
   97               | CONST_BOOL
   98               | CONST_CHAR

   99 constante_lista: BRACKET_START constante_lista_int BRACKET_END
  100                | BRACKET_START constante_lista_float BRACKET_END
  101                | BRACKET_START constante_lista_bool BRACKET_END
  102                | BRACKET_START constante_lista_char BRACKET_END

  103 constante_lista_int: constante_lista_int COMMA CONST_INT
  104                    | CONST_INT

  105 constante_lista_float: constante_lista_float COMMA CONST_FLOAT
  106                      | CONST_FLOAT

  107 constante_lista_bool: constante_lista_bool COMMA CONST_BOOL
  108                     | CONST_BOOL

  109 constante_lista_char: constante_lista_char COMMA CONST_CHAR
  110                     | CONST_CHAR

  111 Lista_expresiones: Lista_expresiones COMMA expresion
  112                  | expresion

  113 tipo: TYPE
  114     | LIST_OF TYPE

  115 lista_variables: lista_variables COMMA IDENTIFIER
  116                | IDENTIFIER
  117                | lista_variables error IDENTIFIER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 21 28 84 117
    MAIN (258) 2
    PARENT_END (259) 24 52 54 56 83 87 88
    BLOCK_START (260) 5
    BLOCK_END (261) 5
    BRACKET_START (262) 99 100 101 102
    BRACKET_END (263) 99 100 101 102
    COLON (264) 20 51 57 58 59 61 63 64
    COMMA (265) 25 57 89 90 103 105 107 109 111 115
    ASSIGN (266) 51 62
    IF (267) 52 54
    ELSE (268) 54
    WHILE (269) 56
    RETURN (270) 61
    FOR (271) 62
    TO (272) 62
    OUTPUT (273) 59
    INPUT (274) 57 58
    BEGIN_LOCAL (275) 15
    END_LOCAL (276) 15
    LIST_OF (277) 114
    TYPE (278) 113 114
    STRING (279) 57 90 92
    AT (280) 77 82
    OP_BINARY_OR (281) 74
    OP_BINARY_AND (282) 73
    OP_BINARY_EQ (283) 76
    OP_BINARY_REL (284) 75
    PLUS_MINUS (285) 70 71
    OP_BINARY_MUL (286) 72
    OP_UNARY_NEG (287) 65
    OP_UNARY_COUNT (288) 66
    OP_UNARY_QUEST (289) 67
    MINUS_MINUS (290) 69 78
    PLUS_PLUS (291) 68 82
    DOLLAR (292) 64
    OP_LIST (293) 63
    CONST_INT (294) 95 103 104
    CONST_FLOAT (295) 96 105 106
    CONST_BOOL (296) 97 107 108
    CONST_CHAR (297) 98 109 110
    IDENTIFIER (298) 24 29 51 62 63 64 79 86 115 116 117
    PARENT_START (299) 24 52 54 56 83 86


No terminales con las reglas donde aparecen

    $accept (45)
        on left: 0
    Programa (46)
        on left: 2
        on right: 0
    $@1 (47)
        on left: 1
        on right: 2
    bloque (48)
        on left: 5
        on right: 2 13 35
    $@2 (49)
        on left: 3
        on right: 5
    $@3 (50)
        on left: 4
        on right: 5
    bloque_in (51)
        on left: 7 9
        on right: 5
    $@4 (52)
        on left: 6
        on right: 7
    $@5 (53)
        on left: 8
        on right: 9
    Declar_de_subprogs (54)
        on left: 10 11
        on right: 7 9 10
    Declar_subprog (55)
        on left: 13
        on right: 10
    $@6 (56)
        on left: 12
        on right: 13
    Declar_de_variables_locales (57)
        on left: 15 16
        on right: 7 9
    $@7 (58)
        on left: 14
        on right: 15
    Variables_locales (59)
        on left: 17 18
        on right: 15 17
    Cuerpo_declar_variables (60)
        on left: 20 21
        on right: 17 18
    $@8 (61)
        on left: 19
        on right: 20
    Cabecera_subprograma (62)
        on left: 24
        on right: 13
    $@9 (63)
        on left: 22
        on right: 24
    $@10 (64)
        on left: 23
        on right: 24
    lista_de_parametros (65)
        on left: 25 26 27 28
        on right: 24 25
    parametro (66)
        on left: 29
        on right: 25 26
    Sentencias (67)
        on left: 31 33
        on right: 7 31
    $@11 (68)
        on left: 30
        on right: 31
    $@12 (69)
        on left: 32
        on right: 33
    Sentencia (70)
        on left: 35 36 38 40 42 44 46 48 50
        on right: 31 33 52 54 56 62
    $@13 (71)
        on left: 34
        on right: 35
    $@14 (72)
        on left: 37
        on right: 38
    $@15 (73)
        on left: 39
        on right: 40
    $@16 (74)
        on left: 41
        on right: 42
    $@17 (75)
        on left: 43
        on right: 44
    $@18 (76)
        on left: 45
        on right: 46
    $@19 (77)
        on left: 47
        on right: 48
    $@20 (78)
        on left: 49
        on right: 50
    Sentencia_asignacion (79)
        on left: 51
        on right: 36
    Sentencia_if (80)
        on left: 52 54
        on right: 38
    $@21 (81)
        on left: 53
        on right: 54
    Sentencia_while (82)
        on left: 56
        on right: 40
    $@22 (83)
        on left: 55
        on right: 56
    Sentencia_entrada (84)
        on left: 57 58
        on right: 42
    Sentencia_salida (85)
        on left: 59
        on right: 44
    Sentencia_return (86)
        on left: 61
        on right: 46
    @23 (87)
        on left: 60
        on right: 61
    Sentencia_for (88)
        on left: 62
        on right: 48
    Sentencia_lista (89)
        on left: 63 64
        on right: 50
    expresion (90)
        on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84
        on right: 51 52 54 56 61 62 65 66 67 68 69 70 71 72 73 74 75 76 77 78 82 83 89 91 111 112
    funcion (91)
        on left: 85
        on right: 81
    cabecera_funcion (92)
        on left: 86
        on right: 85
    argumentos_funcion (93)
        on left: 87 88
        on right: 85
    Lista_expresiones_o_cadena (94)
        on left: 89 90 91 92
        on right: 59 89 90
    constante (95)
        on left: 93 94
        on right: 80
    constante_base (96)
        on left: 95 96 97 98
        on right: 93
    constante_lista (97)
        on left: 99 100 101 102
        on right: 94
    constante_lista_int (98)
        on left: 103 104
        on right: 99 103
    constante_lista_float (99)
        on left: 105 106
        on right: 100 105
    constante_lista_bool (100)
        on left: 107 108
        on right: 101 107
    constante_lista_char (101)
        on left: 109 110
        on right: 102 109
    Lista_expresiones (102)
        on left: 111 112
        on right: 87 111
    tipo (103)
        on left: 113 114
        on right: 20 24 29
    lista_variables (104)
        on left: 115 116 117
        on right: 20 57 58 115 117


Estado 0

    0 $accept: • Programa $end

    $default  reduce usando la regla 1 ($@1)

    Programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: Programa • $end

    $end  desplazar e ir al estado 3


Estado 2

    2 Programa: $@1 • MAIN bloque

    MAIN  desplazar e ir al estado 4


Estado 3

    0 $accept: Programa $end •

    $default  aceptar


Estado 4

    2 Programa: $@1 MAIN • bloque

    BLOCK_START  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    5 bloque: BLOCK_START • $@2 bloque_in BLOCK_END $@3

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 Programa: $@1 MAIN bloque •

    $default  reduce usando la regla 2 (Programa)


Estado 7

    5 bloque: BLOCK_START $@2 • bloque_in BLOCK_END $@3

    BEGIN_LOCAL  desplazar e ir al estado 8

    $default  reduce usando la regla 16 (Declar_de_variables_locales)

    bloque_in                    ir al estado 9
    Declar_de_variables_locales  ir al estado 10


Estado 8

   15 Declar_de_variables_locales: BEGIN_LOCAL • $@7 Variables_locales END_LOCAL

    $default  reduce usando la regla 14 ($@7)

    $@7  ir al estado 11


Estado 9

    5 bloque: BLOCK_START $@2 bloque_in • BLOCK_END $@3

    BLOCK_END  desplazar e ir al estado 12


Estado 10

    7 bloque_in: Declar_de_variables_locales • $@4 Declar_de_subprogs Sentencias
    9          | Declar_de_variables_locales • $@5 Declar_de_subprogs

    BLOCK_END  reduce usando la regla 8 ($@5)
    LIST_OF    reduce usando la regla 6 ($@4)
    LIST_OF    [reduce usando la regla 8 ($@5)]
    TYPE       reduce usando la regla 6 ($@4)
    TYPE       [reduce usando la regla 8 ($@5)]
    $default   reduce usando la regla 6 ($@4)

    $@4  ir al estado 13
    $@5  ir al estado 14


Estado 11

   15 Declar_de_variables_locales: BEGIN_LOCAL $@7 • Variables_locales END_LOCAL

    error    desplazar e ir al estado 15
    LIST_OF  desplazar e ir al estado 16
    TYPE     desplazar e ir al estado 17

    Variables_locales        ir al estado 18
    Cuerpo_declar_variables  ir al estado 19
    tipo                     ir al estado 20


Estado 12

    5 bloque: BLOCK_START $@2 bloque_in BLOCK_END • $@3

    $default  reduce usando la regla 4 ($@3)

    $@3  ir al estado 21


Estado 13

    7 bloque_in: Declar_de_variables_locales $@4 • Declar_de_subprogs Sentencias

    $default  reduce usando la regla 11 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 22


Estado 14

    9 bloque_in: Declar_de_variables_locales $@5 • Declar_de_subprogs

    $default  reduce usando la regla 11 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 23


Estado 15

   21 Cuerpo_declar_variables: error •

    $default  reduce usando la regla 21 (Cuerpo_declar_variables)


Estado 16

  114 tipo: LIST_OF • TYPE

    TYPE  desplazar e ir al estado 24


Estado 17

  113 tipo: TYPE •

    $default  reduce usando la regla 113 (tipo)


Estado 18

   15 Declar_de_variables_locales: BEGIN_LOCAL $@7 Variables_locales • END_LOCAL
   17 Variables_locales: Variables_locales • Cuerpo_declar_variables

    error      desplazar e ir al estado 15
    END_LOCAL  desplazar e ir al estado 25
    LIST_OF    desplazar e ir al estado 16
    TYPE       desplazar e ir al estado 17

    Cuerpo_declar_variables  ir al estado 26
    tipo                     ir al estado 20


Estado 19

   18 Variables_locales: Cuerpo_declar_variables •

    $default  reduce usando la regla 18 (Variables_locales)


Estado 20

   20 Cuerpo_declar_variables: tipo • $@8 lista_variables COLON

    $default  reduce usando la regla 19 ($@8)

    $@8  ir al estado 27


Estado 21

    5 bloque: BLOCK_START $@2 bloque_in BLOCK_END $@3 •

    $default  reduce usando la regla 5 (bloque)


Estado 22

    7 bloque_in: Declar_de_variables_locales $@4 Declar_de_subprogs • Sentencias
   10 Declar_de_subprogs: Declar_de_subprogs • Declar_subprog

    LIST_OF  desplazar e ir al estado 16
    TYPE     desplazar e ir al estado 17

    $default  reduce usando la regla 32 ($@12)

    Declar_subprog        ir al estado 28
    Cabecera_subprograma  ir al estado 29
    Sentencias            ir al estado 30
    $@12                  ir al estado 31
    tipo                  ir al estado 32


Estado 23

    9 bloque_in: Declar_de_variables_locales $@5 Declar_de_subprogs •
   10 Declar_de_subprogs: Declar_de_subprogs • Declar_subprog

    LIST_OF  desplazar e ir al estado 16
    TYPE     desplazar e ir al estado 17

    $default  reduce usando la regla 9 (bloque_in)

    Declar_subprog        ir al estado 28
    Cabecera_subprograma  ir al estado 29
    tipo                  ir al estado 32


Estado 24

  114 tipo: LIST_OF TYPE •

    $default  reduce usando la regla 114 (tipo)


Estado 25

   15 Declar_de_variables_locales: BEGIN_LOCAL $@7 Variables_locales END_LOCAL •

    $default  reduce usando la regla 15 (Declar_de_variables_locales)


Estado 26

   17 Variables_locales: Variables_locales Cuerpo_declar_variables •

    $default  reduce usando la regla 17 (Variables_locales)


Estado 27

   20 Cuerpo_declar_variables: tipo $@8 • lista_variables COLON

    IDENTIFIER  desplazar e ir al estado 33

    lista_variables  ir al estado 34


Estado 28

   10 Declar_de_subprogs: Declar_de_subprogs Declar_subprog •

    $default  reduce usando la regla 10 (Declar_de_subprogs)


Estado 29

   13 Declar_subprog: Cabecera_subprograma • $@6 bloque

    $default  reduce usando la regla 12 ($@6)

    $@6  ir al estado 35


Estado 30

    7 bloque_in: Declar_de_variables_locales $@4 Declar_de_subprogs Sentencias •
   31 Sentencias: Sentencias • $@11 Sentencia

    BLOCK_END  reduce usando la regla 7 (bloque_in)
    $default   reduce usando la regla 30 ($@11)

    $@11  ir al estado 36


Estado 31

   33 Sentencias: $@12 • Sentencia

    IDENTIFIER  desplazar e ir al estado 37

    IF          reduce usando la regla 37 ($@14)
    WHILE       reduce usando la regla 39 ($@15)
    RETURN      reduce usando la regla 45 ($@18)
    FOR         reduce usando la regla 47 ($@19)
    OUTPUT      reduce usando la regla 43 ($@17)
    INPUT       reduce usando la regla 41 ($@16)
    DOLLAR      reduce usando la regla 49 ($@20)
    IDENTIFIER  [reduce usando la regla 49 ($@20)]
    $default    reduce usando la regla 34 ($@13)

    Sentencia             ir al estado 38
    $@13                  ir al estado 39
    $@14                  ir al estado 40
    $@15                  ir al estado 41
    $@16                  ir al estado 42
    $@17                  ir al estado 43
    $@18                  ir al estado 44
    $@19                  ir al estado 45
    $@20                  ir al estado 46
    Sentencia_asignacion  ir al estado 47


Estado 32

   24 Cabecera_subprograma: tipo • IDENTIFIER $@9 PARENT_START lista_de_parametros PARENT_END $@10

    IDENTIFIER  desplazar e ir al estado 48


Estado 33

  116 lista_variables: IDENTIFIER •

    $default  reduce usando la regla 116 (lista_variables)


Estado 34

   20 Cuerpo_declar_variables: tipo $@8 lista_variables • COLON
  115 lista_variables: lista_variables • COMMA IDENTIFIER
  117                | lista_variables • error IDENTIFIER

    error  desplazar e ir al estado 49
    COLON  desplazar e ir al estado 50
    COMMA  desplazar e ir al estado 51


Estado 35

   13 Declar_subprog: Cabecera_subprograma $@6 • bloque

    BLOCK_START  desplazar e ir al estado 5

    bloque  ir al estado 52


Estado 36

   31 Sentencias: Sentencias $@11 • Sentencia

    IDENTIFIER  desplazar e ir al estado 37

    IF          reduce usando la regla 37 ($@14)
    WHILE       reduce usando la regla 39 ($@15)
    RETURN      reduce usando la regla 45 ($@18)
    FOR         reduce usando la regla 47 ($@19)
    OUTPUT      reduce usando la regla 43 ($@17)
    INPUT       reduce usando la regla 41 ($@16)
    DOLLAR      reduce usando la regla 49 ($@20)
    IDENTIFIER  [reduce usando la regla 49 ($@20)]
    $default    reduce usando la regla 34 ($@13)

    Sentencia             ir al estado 53
    $@13                  ir al estado 39
    $@14                  ir al estado 40
    $@15                  ir al estado 41
    $@16                  ir al estado 42
    $@17                  ir al estado 43
    $@18                  ir al estado 44
    $@19                  ir al estado 45
    $@20                  ir al estado 46
    Sentencia_asignacion  ir al estado 47


Estado 37

   51 Sentencia_asignacion: IDENTIFIER • ASSIGN expresion COLON

    ASSIGN  desplazar e ir al estado 54


Estado 38

   33 Sentencias: $@12 Sentencia •

    $default  reduce usando la regla 33 (Sentencias)


Estado 39

   35 Sentencia: $@13 • bloque

    BLOCK_START  desplazar e ir al estado 5

    bloque  ir al estado 55


Estado 40

   38 Sentencia: $@14 • Sentencia_if

    IF  desplazar e ir al estado 56

    Sentencia_if  ir al estado 57


Estado 41

   40 Sentencia: $@15 • Sentencia_while

    WHILE  desplazar e ir al estado 58

    Sentencia_while  ir al estado 59


Estado 42

   42 Sentencia: $@16 • Sentencia_entrada

    INPUT  desplazar e ir al estado 60

    Sentencia_entrada  ir al estado 61


Estado 43

   44 Sentencia: $@17 • Sentencia_salida

    OUTPUT  desplazar e ir al estado 62

    Sentencia_salida  ir al estado 63


Estado 44

   46 Sentencia: $@18 • Sentencia_return

    RETURN  desplazar e ir al estado 64

    Sentencia_return  ir al estado 65


Estado 45

   48 Sentencia: $@19 • Sentencia_for

    FOR  desplazar e ir al estado 66

    Sentencia_for  ir al estado 67


Estado 46

   50 Sentencia: $@20 • Sentencia_lista

    DOLLAR      desplazar e ir al estado 68
    IDENTIFIER  desplazar e ir al estado 69

    Sentencia_lista  ir al estado 70


Estado 47

   36 Sentencia: Sentencia_asignacion •

    $default  reduce usando la regla 36 (Sentencia)


Estado 48

   24 Cabecera_subprograma: tipo IDENTIFIER • $@9 PARENT_START lista_de_parametros PARENT_END $@10

    $default  reduce usando la regla 22 ($@9)

    $@9  ir al estado 71


Estado 49

  117 lista_variables: lista_variables error • IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 72


Estado 50

   20 Cuerpo_declar_variables: tipo $@8 lista_variables COLON •

    $default  reduce usando la regla 20 (Cuerpo_declar_variables)


Estado 51

  115 lista_variables: lista_variables COMMA • IDENTIFIER

    IDENTIFIER  desplazar e ir al estado 73


Estado 52

   13 Declar_subprog: Cabecera_subprograma $@6 bloque •

    $default  reduce usando la regla 13 (Declar_subprog)


Estado 53

   31 Sentencias: Sentencias $@11 Sentencia •

    $default  reduce usando la regla 31 (Sentencias)


Estado 54

   51 Sentencia_asignacion: IDENTIFIER ASSIGN • expresion COLON
